@@ -6,16 +6,17 @@ import static nva.commons.core.attempt.Try.attempt;
 import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpResponse;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import no.unit.nva.cristin.common.client.ApiClient;
 import no.unit.nva.cristin.model.CristinQuery;
 import no.unit.nva.cristin.projects.model.cristin.CristinProject;
 import no.unit.nva.cristin.projects.model.nva.NvaProject;
 import nva.commons.apigateway.exceptions.ApiGatewayException;
 import nva.commons.core.attempt.Try;
+
 
 public class CristinProjectApiClient extends ApiClient {
 
@@ -51,18 +52,18 @@ public class CristinProjectApiClient extends ApiClient {
 
     protected List<CristinProject> combineResultsWithQueryInCaseEnrichmentFails(List<CristinProject> projectsFromQuery,
                                                                                 List<CristinProject> enrichedProjects) {
-        Set<String> enrichedProjectIds = enrichedProjects.stream()
-                .map(CristinProject::getCristinProjectId)
-                .collect(Collectors.toSet());
+        final var enrichedProjectIds = getEnrichedProjectIds(enrichedProjects);
 
-        List<CristinProject> missingProjects = projectsFromQuery.stream()
-                .filter(queryProject -> !enrichedProjectIds.contains(queryProject.getCristinProjectId()))
-                .collect(Collectors.toList());
+        var missingProjects = projectsFromQuery.stream()
+                .filter(queryProject -> !enrichedProjectIds.contains(queryProject.getCristinProjectId()));
 
-        ArrayList<CristinProject> result = new ArrayList<>();
-        result.addAll(enrichedProjects);
-        result.addAll(missingProjects);
-        return result;
+        return Stream.concat(enrichedProjects.stream(), missingProjects).toList();
+    }
+
+    private Set<String> getEnrichedProjectIds(List<CristinProject> enrichedProjects) {
+        return enrichedProjects.stream()
+                   .map(CristinProject::getCristinProjectId)
+                   .collect(Collectors.toSet());
     }
 
     private boolean allProjectsWereEnriched(List<CristinProject> projectsFromQuery,
@@ -74,7 +75,7 @@ public class CristinProjectApiClient extends ApiClient {
         return projectsFromQuery.stream()
                    .map(CristinProject::getCristinProjectId)
                    .map(CristinQuery::fromIdentifier)
-                   .collect(Collectors.toList());
+                   .toList();
     }
 
     private List<CristinProject> mapValidResponsesToCristinProjects(List<HttpResponse<String>> responses) {
@@ -82,14 +83,14 @@ public class CristinProjectApiClient extends ApiClient {
                 .map(attempt(response -> getDeserializedResponse(response, CristinProject.class)))
                 .map(Try::orElseThrow)
                 .filter(CristinProject::hasValidContent)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     protected List<NvaProject> mapValidCristinProjectsToNvaProjects(List<CristinProject> cristinProjects) {
         return cristinProjects.stream()
                 .filter(CristinProject::hasValidContent)
                 .map(CristinProject::toNvaProject)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
